--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   
 
-  <button type="button" class="btn btn-primary" id="btn_img" data-toggle="modal" data-target="#exampleModal">
+  <button type="image" src="sk png.png"class="btn btn-primary" id="btn_img" data-toggle="modal" data-target="#exampleModal">
       Where
     </button>
 
