--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
   
 
-  <button type="image" src="sk png.png"class="btn btn-primary" id="btn_img" data-toggle="modal" data-target="#exampleModal">
+  <input type="image" src="sk png.png" class="btn btn-primary" id="btn_img" data-toggle="modal" data-target="#exampleModal">
       Where
-    </button>
+</input>
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
