--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   
 
-  <input type="image" src="sk png.png" class="btn btn-primary" id="btn_img" data-toggle="modal" data-target="#exampleModal">
+  <input type="image" src="sk png.png"  id="btn_img" data-toggle="modal" data-target="#exampleModal">
       Where
 </input>
 
