--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
   
 
-  <input type="image" src="sk png.png"  id="btn_img" data-toggle="modal" data-target="#exampleModal">
+  <button type="button" class="btn btn-primary" id="btn_img" data-toggle="modal" data-target="#exampleModal">
       Where
-</input>
+    </button>
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
