--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <p class="font-weight-bold">Photos</p>
           <hr>
           <a class="example-image-link" href="1.jpg" data-lightbox="Marriage1"><img width="170px" height="100px"class="example-image" src="1.jpg" alt="Marriage" /></a>
-          <a class="example-image-link" href="2.jpg" data-lightbox="Marriage2" data-title="Optional caption."><img  width="170px" height="100px"class="example-image" src="2.JPG" alt="Marraige"/></a>
+          <a class="example-image-link" href="2.JPG" data-lightbox="Marriage2" data-title="Optional caption."><img  width="170px" height="100px"class="example-image" src="2.JPG" alt="Marraige"/></a>
 
         </h1>
 
