--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
 </head>
 
 <body>
+  <div class="alllove">
+    <span class="love love1 glyphicon glyphicon-heart"></span>
+    <span class="love love2 glyphicon glyphicon-heart"></span>
+    <span class="love love3 glyphicon glyphicon-heart"></span>
+    <span class="love love4 glyphicon glyphicon-heart"></span>
+    <span class="love love5 glyphicon glyphicon-heart"></span>
+    <h1 id="h1_id">Loading Love...</h1>
+  </div>
 
 
 
 
-
-
+<div style="display:none;"  class="animate-bottom" id="content">
   <div id="hero_div" class="container-fluid">
     <nav class="navbar sticky-top container-fluid navbar-expand-lg navbar-dark bg-pink">
       <a class="navbar-brand" href="#">  <img src="SK png.png" width="50" height="50" alt=""></a>
@@ -177,7 +184,7 @@
   <div class="card-header">
      <p class="text-right"> Website Crafted by Smazee Studio</p>
     </div>
-
+</div>
 
 
 
