--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="alllove">
+  <div id="all"class="alllove">
     <span class="love love1 glyphicon glyphicon-heart"></span>
     <span class="love love2 glyphicon glyphicon-heart"></span>
     <span class="love love3 glyphicon glyphicon-heart"></span>
