--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 
-<div style="display:none;"  class="animate-bottom" id="content">
+<div   class="animate-bottom" id="content">
   <div id="hero_div" class="container-fluid">
     <nav class="navbar sticky-top container-fluid navbar-expand-lg navbar-dark bg-pink">
       <a class="navbar-brand" href="#">  <img src="SK png.png" width="50" height="50" alt=""></a>
