--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase-firestore.js"></script>
 </head>
 
-<body>
+<body onload="myFunction()">
  
 
+  <div id="loader"></div>
 
 
 
-<div   class="animate-bottom" id="content">
+<div  style="display:none;" class="animate-bottom" id="content">
   <div id="hero_div" class="container-fluid">
     <nav class="navbar sticky-top container-fluid navbar-expand-lg navbar-dark bg-pink">
       <a class="navbar-brand" href="#">  <img src="SK png.png" width="50" height="50" alt=""></a>
