--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
 <body onload="myFunction()">
  
 
-  <div id="loader"></div>
+  <div id="loader">
+    <span class="love love1 glyphicon glyphicon-heart"></span>
+    <span class="love love2 glyphicon glyphicon-heart"></span>
+    <span class="love love3 glyphicon glyphicon-heart"></span>
+    <span class="love love4 glyphicon glyphicon-heart"></span>
+    <span class="love love5 glyphicon glyphicon-heart"></span>
+    <h1 id="h1_id">Loading Love...</h1>
+
+  </div>
 
 
 
