--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <title>Saba Weds Keerthu | Marriage Site </title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <script src="https://use.fontawesome.com/c169d6b255.js"></script>
+  <link rel="shortcut icon" type="image/png" href="sk png.png"/>
+  <link rel="shortcut icon" type="image/png" href="sk png.png"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Clicker+Script|Ruthie|Sail|Sofia" rel="stylesheet">
   <!-- Bootstrap CSS -->
@@ -22,11 +25,11 @@
  
 
   <div id="loader">
-    <span class="love love1 glyphicon glyphicon-heart"></span>
-    <span class="love love2 glyphicon glyphicon-heart"></span>
-    <span class="love love3 glyphicon glyphicon-heart"></span>
-    <span class="love love4 glyphicon glyphicon-heart"></span>
-    <span class="love love5 glyphicon glyphicon-heart"></span>
+    <span class="love love1 fa fa-heart"></span>
+    <span class="love love2 fa fa-heart"></span>
+    <span class="love love3 fa fa-heart"></span>
+    <span class="love love4 fa fa-heart"></span>
+    <span class="love love5 fa fa-heart"></span>
     <h1 id="h1_id">Loading Love...</h1>
 
   </div>
