--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <script src="https://use.fontawesome.com/c169d6b255.js"></script>
-  <link rel="shortcut icon" type="image/png" href="sk png.png"/>
-  <link rel="shortcut icon" type="image/png" href="sk png.png"/>
+  <link rel="shortcut icon" href="sk png.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Clicker+Script|Ruthie|Sail|Sofia" rel="stylesheet">
   <!-- Bootstrap CSS -->
@@ -30,7 +29,7 @@
     <span class="love love3 fa fa-heart"></span>
     <span class="love love4 fa fa-heart"></span>
     <span class="love love5 fa fa-heart"></span>
-    <h1 id="h1_id">Loading Love...</h1>
+    <h1 id="h1_id">Loading Saba Keerthu Love !</h1>
 
   </div>
 
