--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item" active>
-            <a class="nav-link" href="#story">The Story</a>
+            <a class="nav-link" href="#story">The Story<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item" active>
-            <a class="nav-link" href="#gallery">Gallery</a>
+            <a class="nav-link" href="#gallery">Gallery<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item" active>
-            <a class="nav-link" href="#wish">Wish </a>
+            <a class="nav-link" href="#wish">Wish<span class="sr-only">(current)</span> </a>
           </li>
       </div>
 
@@ -166,8 +166,8 @@
 
   
 
-  <button type="button" class="btn btn-primary" id="btn_img" data-toggle="modal" data-target="#exampleModal">
-      Where
+  <button type="button" class="btn btn-success" id="btn_img" data-toggle="modal" data-target="#exampleModal">
+      Where and When
     </button>
 
   <!-- Modal -->
@@ -188,7 +188,7 @@
           <h6> Ramaji Mahal , Trichy <a href="https://goo.gl/maps/FgKuNJ9Z7tv">Get Directions </a></h6>
           <hr>
           <h5>Maruveedu | 26 Nov | 11 AM</h5>
-          <h6> Amaanaa Mahal <a href="https://goo.gl/maps/6Qi9NQroydG2">Get Directions </a></h6>
+          <h6> Ammanaa Mahal , Chennai <a href="https://goo.gl/maps/6Qi9NQroydG2">Get Directions </a></h6>
 
         </div>
         <div class="modal-footer">
