--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           <p class="font-weight-bold">Photos</p>
           <hr>
           <a class="example-image-link" href="invite1.jpg" data-lightbox="Marriage1"><img width="170px" height="100px"class="example-image" src="invite1.jpg" alt="Marriage" /></a>
-          <a class="example-image-link" href="invite2.jpg" data-lightbox="Marriage2" data-title="Invitation"><img  width="170px" height="100px"class="example-image" src="invite2.JPG" alt="Marraige"/></a>
-          <a class="example-image-link" href="invite3.jpg" data-lightbox="Marriage3" data-title="Invitation"><img  width="170px" height="100px"class="example-image" src="invite3.JPG" alt="Marraige"/></a>
+          <a class="example-image-link" href="invite2.jpg" data-lightbox="Marriage2" data-title="Invitation"><img  width="170px" height="100px"class="example-image" src="invite2.jpg" alt="Marraige"/></a>
+          <a class="example-image-link" href="invite3.jpg" data-lightbox="Marriage3" data-title="Invitation"><img  width="170px" height="100px"class="example-image" src="invite3.jpg" alt="Marraige"/></a>
 
         </h1>
 
