--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
           <p class="font-weight-bold">Videos</p>
           <hr>
-          <iframe width="170" height="100" src="https://www.youtube.com/embed/OUB6zKc-Tos?rel=0" frameborder="0" allowfullscreen></iframe>
+          Uploading Soon !
         </h1>
 
 
