--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#home">Home </a>
           </li>
           <li class="nav-item" active>
-            <a class="nav-link" href="#story">The Story<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#story">The Story</a>
           </li>
           <li class="nav-item" active>
-            <a class="nav-link" href="#gallery">Gallery<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#gallery">Gallery</a>
           </li>
           <li class="nav-item" active>
-            <a class="nav-link" href="#wish">Wish<span class="sr-only">(current)</span> </a>
+            <a class="nav-link" href="#wish">Wish </a>
           </li>
       </div>
 
